<resources>
    <string name="app_name">TreePedia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_datapohon">Data Pohon</string>
    <string name="nav_historypohon">History Pohon</string>
    <string name="nav_peta">Peta</string>
    <string name="nav_artikel">Artikel</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Data Pohon</item>
        <item>History Pohon</item>
        <item>Peta</item>
        <item>Artikel</item>
    </string-array>
    <string-array name="android_dropdown_kegiatan">
        <item>Pemangkasan Pohon</item>
        <item>Penebangan Pohon</item>
    </string-array>
    <string-array name="android_dropdown_kondisi">
        <item>Sehat</item>
        <item>Cukup</item>
        <item>Keropos</item>
        <item>Mati</item>
    </string-array>
    <string name="action_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copyright">SFPCC</string>
    <string name="isi_artikel">Isi artikel</string>
    <string name="dot">...</string>
    <string name="submit">submit</string>
    <string name="title_activity_add_artikel">AddArtikelActivity</string>
    <string name="judul_artikel">Judul artikel</string>
    <string name="title_activity_detail_artikel">DetailArtikelActivity</string>
</resources>
