<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_input_artikel">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judul_artikel"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_rounded_white_with_border"
        android:gravity="left"
        android:hint="@string/dot"
        android:lines="1"
        android:padding="10dp"
        android:singleLine="false"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        tools:ignore="RtlHardcoded"
        tools:targetApi="m" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/isi_artikel"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_rounded_white_with_border"
        android:gravity="left"
        android:hint="@string/dot"
        android:lines="6"
        android:padding="10dp"
        android:singleLine="false"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="18sp"
        tools:ignore="RtlHardcoded"
        tools:targetApi="m" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:textSize="18sp" />
</LinearLayout>
